# amber

./: CMakeLists.txt  README.md
cmake/: Sources.cmake  Util.cmake
cmake/modules/: FindCatch2.cmake  Findmica.cmake
src/amber/: aligned_alloc_buffer.cpp  aligned_alloc_buffer.hpp  aligned_buffer.cpp  alloc_error.hpp  amber.hpp  bitwise_enum.hpp  buddy_allocator.hpp  concept.hpp  concepts.hpp  except.hpp  linear_allocator.cpp  linear_allocator.hpp  linear_allocator.inl  malloc_buffer.cpp  malloc_buffer.hpp  mmap_buffer.cpp  mmap_buffer.hpp  pool_allocator.cpp  pool_allocator.hpp  pool_allocator.inl  stack_allocator.cpp  stack_allocator.hpp  stack_allocator.inl  util.cpp  util.hpp  util.inl
src/amber/except/: alignment_error.cpp  alignment_error.hpp  invalid_allocate_error.cpp  invalid_allocate_error.hpp  out_of_bounds_error.cpp  out_of_bounds_error.hpp  out_of_capacity_error.cpp  out_of_capacity_error.hpp  unexpected_error.cpp  unexpected_error.hpp
test/unit/: CMakeLists.txt
test/unit/cmake/: Sources.cmake
test/unit/src/amber_test/: aligned_buffer_test.cpp  linear_allocator_test.cpp  malloc_buffer_test.cpp  mmap_buffer_test.cpp  pool_allocator_test.cpp  stack_allocator_test.cpp  util_test.cpp
